@@ -1,3 +1,9 @@
+2004-06-01  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
+
+	* src/shaders/NonPeriodic.cpp: Use the new boolean functions.
+
+	* src/shaders/AlgebraShader.cpp: Give the textures names.
+
 2004-05-27  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
 
 	* src/UniformPanel.cpp (setShader): Use has_name() instead of hasName().
